...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Configure Favorite Channels" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="owy-EK-bPe">
                                <rect key="frame" x="16" y="75" width="361" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
...
                                <rect key="frame" x="16" y="169" width="361" height="31"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Button" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e7r-8D-BNW">
                                        <rect key="frame" x="0.0" y="0.0" width="63.333333333333336" height="31"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                <rect key="frame" x="16" y="329" width="361" height="32"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Channel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M4D-1s-FcG">
                                        <rect key="frame" x="0.0" y="0.0" width="129.33333333333334" height="32"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                <rect key="frame" x="16" y="251" width="361" height="34"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loi-d6-sty">
                                        <rect key="frame" x="0.0" y="0.0" width="52" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="76.666666666666671" height="34.333333333333336"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
                                        <connections>
                                            <action selector="cancelBut:" destination="eG4-BI-v61" eventType="touchUpInside" id="bPJ-kK-cBW"/>
...
                                        <rect key="frame" x="91.666666666666657" y="0.0" width="76.666666666666657" height="34.333333333333336"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Save"/>
                                        <connections>
                                            <action selector="saveDetails:" destination="eG4-BI-v61" eventType="touchUpInside" id="D35-9W-N6j"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Configuration" image="gearshape" catalog="system" id="mab-Ig-RkH"/>
                    <connections>
                        <outlet property="ControlFavourites" destination="IfB-lC-XNZ" id="37d-mo-dbl"/>
...
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Remote Control" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKi-UL-mje">
                                <rect key="frame" x="16" y="306" width="361" height="31.333333333333314"/>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Remote" selectedImage="av.remote.fill" catalog="system" id="wHm-Gf-2wB">
                        <imageReference key="image" image="av.remote.fill" catalog="system" symbolScale="default"/>
                    </tabBarItem>
...
                                </subviews>
                            </stackView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DVR Remote Control" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2CA-XP-yj5">
                                <rect key="frame" x="16" y="287.66666666666669" width="361" height="33.333333333333314"/>
                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="DVR" image="music.mic.circle.fill" catalog="system" id="D9C-2l-mkU"/>
                    <connections>
                        <outlet property="AllButtonView" destination="M8e-j9-hMM" id="llN-FC-DUF"/>
...
