...
        super.viewDidLoad()
        channelChanger.value = 1
        channelChanger.minimumValue = 1
        channelChanger.maximumValue = 99
        

        changedChannel.accessibilityIdentifier = "Channel_Label_Value"
        textField.accessibilityIdentifier = "Label_TextField_Value"
        // Do any additional setup after loading the view.
    }
    

    @IBOutlet weak var textField: UITextField!
    
...
